--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,7 +10,6 @@
     "add": "Add",
     "create": "Create",
     "details": "Details",
-    "hello": "Hello",
     "info": "Info",
     "name": "Name",
     "value": "Value",
@@ -235,6 +234,13 @@
     "delete_recipe": "Delete recipe",
     "delete_recipe_desc": "Are you sure you want to delete this recipe?",
     "subrecipe": "Subrecipe | Subrecipes",
+    "recipe_steps": "Recipe steps",
+    "no_subrecipes_added": "No subrecipes added to this recipe",
+    "no_commands_added": "No commands added to this recipe",
+    "available_commands": "Available commands",
+    "available_subrecipes": "Available subrecipes",
+    "no_commands_for_device_type": "No commands available for this device type",
+    "no_subrecipes_for_device_type": "No subrecipes available for this device type",
     "toasts": {
       "load_failed": "Loading recipes failed!",
       "create_success": "Recipe created!",
