--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -10,7 +10,6 @@
     "add": "Pridať",
     "create": "Vytvoriť",
     "details": "Detaily",
-    "hello": "Ahoj",
     "info": "Informácie",
     "name": "Názov",
     "value": "Hodnota",
@@ -235,6 +234,13 @@
     "delete_recipe": "Vymazať recept",
     "delete_recipe_desc": "Ste si istý, že chcete vymazať tento recept?",
     "subrecipe": "Podrecept | Podrecepty",
+    "recipe_steps": "Kroky receptu",
+    "no_subrecipes_added": "Žiadne pridané podrecepty",
+    "no_commands_added": "Žiadne pridané príkazy",
+    "available_commands": "Dostupné príkazy",
+    "available_subrecipes": "Dostupné podrecepty",
+    "no_commands_for_device_type": "Žiadne dostupné príkazy pre tento typ zariadenia",
+    "no_subrecipes_for_device_type": "Žiadne dostupné podrecepty pre tento typ zariadenia",
     "toasts": {
       "load_failed": "Načítanie receptov zlyhalo!",
       "create_success": "Recept bol vytvorený!",
