Creation of scenarios without rules

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -316,9 +316,23 @@
       "delete_success": "Scenario deleted!",
       "delete_failed": "Scenario delete failed!"
     },
-    "options": {
+    "type_options": {
       "option1": "All",
       "option2": "Active"
+    },
+    "day_options": {
+      "option1": "Monday",
+      "option2": "Tuesday",
+      "option3": "Wednesday",
+      "option4": "Thursday",
+      "option5": "Friday",
+      "option6": "Saturday",
+      "option7": "Sunday"
+    },
+    "form": {
+      "muted_until": "Muted  until (minutes):",
+      "scenario_active": "Scenario is deactivated:",
+      "scenario_triggered": "Scenario has been triggered:"
     }
   }
 }
