--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,6 +10,8 @@
     "add": "Add",
     "create": "Create",
     "details": "Details",
+    "yes": "Yes",
+    "no": "No",
     "info": "Info",
     "name": "Name",
     "value": "Value",
@@ -191,6 +193,7 @@
     "step": "Step",
     "step_of": "Step {0} of {1}",
     "cycle": "Cycle | Cycles",
+    "job_cycle": "Job cycle",
     "cycle_of": "Cycle {0} of {1}",
     "paused": "Paused",
     "stopping": "Stopping",
