--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -10,6 +10,8 @@
     "add": "Pridať",
     "create": "Vytvoriť",
     "details": "Detaily",
+    "yes": "Áno",
+    "no": "Nie",
     "info": "Informácie",
     "name": "Názov",
     "value": "Hodnota",
@@ -191,6 +193,7 @@
     "step": "Krok",
     "step_of": "Krok {0} z {1}",
     "cycle": "Cyklus | Cykly",
+    "job_cycle": "Cyklus úlohy",
     "cycle_of": "Cyklus {0} z {1}",
     "paused": "Pozastavené",
     "stopping": "Zastavuje sa",
