--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,7 @@
     "value": "Value",
     "options": "Options",
     "refresh": "Refresh",
+    "search": "Search",
     "account": "Account",
     "user_management": "User Management",
     "home": "Home",
