--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -17,6 +17,7 @@
     "value": "Hodnota",
     "options": "Možnosti",
     "refresh": "Obnoviť",
+    "search": "Hľadať",
     "account": "Účet",
     "user_management": "Správa používateľov",
     "home": "Domov",
