--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -313,6 +313,8 @@
     "label": "Scenario | Scenarios",
     "all": "All",
     "active": "Active",
+    "days_active": "Active on days",
+    "hours_active": "Active in hours",
     "create_scenario": "Create scenario",
     "delete_scenario": "Delete scenario",
     "delete_scenario_desc": "Are you sure you want to delete this scenario?",
