--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -319,6 +319,7 @@
     "delete_scenario": "Delete scenario",
     "delete_scenario_desc": "Are you sure you want to delete this scenario?",
     "edit_scenario": "Edit scenario",
+    "conditions": "Conditions",
     "toasts": {
       "load_failed": "Scenario loading failed!",
       "create_success": "Scenario created!",
