Last seen device

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -131,6 +131,9 @@
     "add_sensor": "Add sensor",
     "no_sensors": "No sensors available",
     "unit": "Unit",
+    "response_time": "Response time",
+    "last_seen": "Last seen",
+    "status": "Status",
     "decimal": "Decimal places",
     "init_window": "Initialize 1min window",
     "share_device": "Share device",
