--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -131,6 +131,9 @@
     "add_sensor": "Pridať snímač",
     "no_sensors": "Žiadne dostupné snímače",
     "unit": "Jednotka",
+    "response_time": "Odozva",
+    "last_seen": "Naposledy videné",
+    "status": "Stav",
     "decimal": "Počet desatinných miest",
     "init_window": "Inicializovať 1min okno",
     "share_device": "Zdieľať zariadenie",
