--- a/src/i18n/sk.json
+++ b/src/i18n/sk.json
@@ -26,6 +26,9 @@
     "shared": "Zdieľané",
     "permissions": "Oprávnenia",
     "n_of_m": "{0} z {1}",
+    "refresh": "Obnoviť",
+    "automatic_refresh_interval": "Automatický interval obnovy",
+    "enter_refresh_interval_s": "Zadajte interval obnovy v sekundách",
     "rules": {
       "required": "Toto pole je povinné!"
     }
