Add auto response btn to more pages

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -28,7 +28,7 @@
     "n_of_m": "{0} of {1}",
     "refresh": "Refresh",
     "automatic_refresh_interval": "Automatic refresh interval",
-    "enter_refresh_interval_s": "Enter refresh interval in seconds",
+    "enter_refresh_interval_s": "Enter refresh interval in seconds (0 to disable)",
     "rules": {
       "required": "This field is required!"
     }
